<resources>
    <string name="app_name">tadaktadak_front</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Main_title">내 손안의</string>
    <string name="highlight_title">근로계약서</string>
    <string name="search">내 계약서 검색하기</string>

    <string name="addcamera">카메라로 추가하기</string>
    <string name="addphoto">갤러리로 추가하기</string>
    <string name="selectimg">이미지 선택하기</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>