<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NaviHome">


    <TextView
        android:id="@+id/handtext"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="57dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Main_title"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contracttext"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:fontFamily="sans-serif"
        android:text="@string/highlight_title"
        android:textColor="@color/dark_gray"
        android:textSize="28dp"
        app:layout_constraintStart_toEndOf="@+id/handtext"
        app:layout_constraintTop_toTopOf="@+id/handtext" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:scrollbarStyle="outsideInset"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handtext"
        app:queryBackground="@drawable/searchview_background"
        app:queryHint="@string/search"
        app:closeIcon="@drawable/ic_serch_close" />

    <ImageView
        android:id="@+id/select_ImageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view"
        app:layout_constraintVertical_bias="0.498"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/select_ImageView"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/camera_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/addcamera"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/addphoto"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/select_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/selectimg"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_ImageView"
        tools:layout_editor_absoluteX="4dp">

        <ImageButton
            android:id="@+id/btnCamera"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"

            android:background="@drawable/button_resource"
            android:baselineAlignBottom="false"
            android:src="@drawable/ic_home_camera_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/camera_text"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btnGallery"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_gravity="center"
            android:background="@drawable/button_resource"
            android:src="@drawable/ic_home_photo_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_text"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/btnselect"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_resource"
            android:src="@drawable/ic_baseline_check_box_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_text"
            app:tint="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>